--- a/app/global.css
+++ b/app/global.css
@@ -27,6 +27,6 @@ h2::after {
   display: block;
   width: 50px;
   height: 3px;
-  background-color: #ddd;
+  background-color: #ccc;
   margin: 15px auto;
 }
