--- a/app/global.css
+++ b/app/global.css
@@ -25,8 +25,9 @@ p a {
 h2::after {
   content: "";
   display: block;
-  width: 50px;
-  height: 3px;
-  background-color: #ccc;
-  margin: 15px auto;
+  width: 60px;
+  height: 4px;
+  background: linear-gradient(135deg, #87c0db, #c183c1);
+  margin: 15px auto 30px;
+  border-radius: 10px;
 }
